--- a/GeneticAlgNetControl/Pages/Save.cshtml
+++ b/GeneticAlgNetControl/Pages/Save.cshtml
@@ -57,7 +57,7 @@
                                 <div class="form-group" hidden>
                                     <label asp-for="Input.Ids" class="font-weight-bold">IDs</label>
                                     <input asp-for="Input.Ids" type="hidden" class="form-control" />
-                                    <span asp-description-for="Input.Ids" class="text-muted small">The internal IDs of the algorithms to be downloaded, formatted as a JSON string array.</span>
+                                    <span asp-description-for="Input.Ids" class="text-muted small">The internal IDs of the analyses to be downloaded, formatted as a JSON string array.</span>
                                     <span asp-validation-for="Input.Ids" class="text-danger small"></span>
                                 </div>
                                 <div class="row align-items-center">
