--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -34,9 +34,9 @@
                             <span class="col-2 text-center text-warning px-1"><i class="fas fa-question-circle"></i></span>
                             <span class="col-10">About</span>
                         </a>
-                        <a asp-page="/Close" class="nav-item nav-link d-flex flex-row align-items-center @(activePage == "Close" ? "active" : string.Empty)">
+                        <a asp-page="/Quit" class="nav-item nav-link d-flex flex-row align-items-center @(activePage == "Quit" ? "active" : string.Empty)">
                             <span class="col-2 text-center text-danger px-1"><i class="fas fa-times-circle"></i></span>
-                            <span class="col-10">Close</span>
+                            <span class="col-10">Quit</span>
                         </a>
                         <span class="font-weight-bold navbar-text text-muted">Algorithms</span>
                         <a asp-page="/Create" class="nav-item nav-link d-flex flex-row align-items-center @(activePage == "Create" ? "active" : string.Empty)">
