--- a/GeneticAlgNetControl/Pages/Quit.cshtml
+++ b/GeneticAlgNetControl/Pages/Quit.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model GeneticAlgNetControl.Pages.CloseModel
+@model GeneticAlgNetControl.Pages.QuitModel
 @{
-    ViewData["Title"] = "Close";
-    ViewData["ActivePage"] = "Close";
+    ViewData["Title"] = "Quit";
+    ViewData["ActivePage"] = "Quit";
 }
 
 <div class="flex-grow-1 d-flex flex-column justify-content-center">
@@ -19,15 +19,26 @@
                         <span>Are you sure you want to close the application?</span>
                     </div>
                     <div class="text-center text-lg-left mb-4">
-                        <span>Pressing the button below will try to gracefully close the application. It will try to save the progress and stop all ongoing algorithms, which will be automatically restarted upon the next application launch. The browser window will close immediately, however the complete operation might take a few moments.</span>
+                        <span>Pressing the button below will try to gracefully close the application. It will try to save the progress and stop all ongoing algorithms, which will be automatically restarted upon the next application launch. The browser window may be closed immediately, however the complete operation might take a few moments.</span>
                     </div>
                     <div class="text-center">
                         <form method="post">
-                            <button type="submit" class="btn btn-outline-danger" onclick="window.close();">
+                            <button type="submit" class="btn btn-outline-danger" data-toggle="modal" data-target=".modal">
                                 <span>Close</span>
                             </button>
                         </form>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" data-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="modal-body">
+                    <span>The application will stop. You may now close the browser window.</span>
                 </div>
             </div>
         </div>
