--- a/GeneticAlgNetControl/Pages/Stop.cshtml
+++ b/GeneticAlgNetControl/Pages/Stop.cshtml
@@ -58,7 +58,7 @@
                                 <div class="form-group" hidden>
                                     <label asp-for="Input.Ids" class="font-weight-bold">IDs</label>
                                     <input asp-for="Input.Ids" type="hidden" class="form-control" />
-                                    <span asp-description-for="Input.Ids" class="text-muted small">The internal IDs of the algorithms to be stopped, formatted as a JSON string array.</span>
+                                    <span asp-description-for="Input.Ids" class="text-muted small">The internal IDs of the analyses to be stopped, formatted as a JSON string array.</span>
                                     <span asp-validation-for="Input.Ids" class="text-danger small"></span>
                                 </div>
                                 <button type="submit" class="btn btn-block btn-danger text-wrap my-1" title="Stop all">
