Updated the behavior of ongoing analyses when the application is closing.

--- a/GeneticAlgNetControl/Pages/Quit.cshtml
+++ b/GeneticAlgNetControl/Pages/Quit.cshtml
@@ -19,7 +19,7 @@
                         <span>Are you sure you want to close the application?</span>
                     </div>
                     <div class="text-center text-lg-left mb-4">
-                        <span>Pressing the button below will try to gracefully close the application. It will try to save the progress and stop all ongoing algorithms, which will be automatically restarted upon the next application launch. The browser window may be closed immediately, however the complete operation might take a few moments.</span>
+                        <span>Pressing the button below will try to gracefully close the application. It will try to save the progress and stop all ongoing algorithms, which can be then restarted upon the next application launch. The browser window may be closed immediately, however the complete operation might take a few moments.</span>
                     </div>
                     <div class="text-center">
                         <form method="post">
