Updated the Index and About pages.

--- a/GeneticAlgNetControl/Pages/Index.cshtml
+++ b/GeneticAlgNetControl/Pages/Index.cshtml
@@ -16,8 +16,8 @@
                     <div class="h4 text-center text-lg-left mb-4">
                         <span>Genetic Algorithms for Network Controllability</span>
                     </div>
-                    <div class="text-center text-lg-left mb-4">
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span>
+                    <div class="text-center text-lg-left small mb-4">
+                        <span>GenericAlgNetControl is a fast heuristic for the network target controllability problem. For a directed network, a set of targets, and a set of preferred nodes, it finds a small set of input nodes (as many of them as possible being preferred nodes) controlling the set of target nodes. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
                     </div>
                     <div class="text-center">
                         <a asp-page="/About" class="btn btn-success">
