Fixed small inconsistencies.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -51,7 +51,7 @@
                     <span><span class="font-italic font-weight-bold">GenericAlgNetControl</span> is a fast heuristic for the network target controllability problem. For a directed network, a set of targets, and a set of preferred nodes, it finds a small set of input nodes (as many of them as possible being preferred nodes) controlling the set of target nodes. The software is customised for applications in drug repurposing and combinatorial drug therapy identification based on synthetic lethality.</span>
                 </div>
                 <div class="mb-1">
-                    <span>It was made with <span class="text-danger"><i class="fas fa-heart"></i></span> using <a href="https://dotnet.microsoft.com/" target="_blank">.NET Core</a> <span class=""><i class="fas fa-external-link-alt"></i></span>.</span>
+                    <span>It was created using <a href="https://dotnet.microsoft.com/" target="_blank">.NET Core</a> <span class=""><i class="fas fa-external-link-alt"></i></span>.</span>
                 </div>
                 <div class="mb-1">
                     <span>More information regarding the target controllability problem, the algorithm, the software implementation, as well as possible data sets, is available in the <a href="#about-citing-publication">corresponding publication</a>.</span>
