--- a/GeneticAlgNetControl/Pages/Details.cshtml
+++ b/GeneticAlgNetControl/Pages/Details.cshtml
@@ -259,11 +259,11 @@
         <div class="container my-2">
             <div class="card shadow-sm">
                 <div class="card-body">
-                    <table class="table table-light table-striped table-hover table-bordered table-datatable">
+                    <table class="table table-light table-striped table-hover table-bordered table-datatable" data-order="[[2, &quot;desc&quot;]]">
                         <thead class="thead-light">
                             <tr>
                                 <th>
-                                    <span>Control node</span>
+                                    <span>Input node</span>
                                 </th>
                                 <th>
                                     <span>Reachable target nodes</span>
@@ -280,24 +280,29 @@
                             @{
                                 var solution = Model.View.Solutions.First();
                             }
-                            @foreach (var controlNode in solution.UniqueControlNodes)
+                            @foreach (var inputNode in solution.UniqueInputNodes)
                             {
-                                var currentTargetNodes = solution.Genes.Where(item => item.Value == controlNode).Select(item => item.Key);
-                                var currentPercentage = currentTargetNodes.Count() * 100 / solution.Genes.Count();
+                                var currentTargetNodes = solution.Genes.Where(item => item.Value == inputNode).Select(item => item.Key);
+                                var currentCount = currentTargetNodes.Count();
+                                var currentPercentage = currentCount * 100 / solution.Genes.Count();
                                 <tr>
                                     <td>
-                                        <span>@controlNode</span>
+                                        <span>@inputNode</span>
+                                        @if (Model.View.PreferredNodes.Contains(inputNode))
+                                        {
+                                            <span>(preferred)</span>
+                                        }
                                     </td>
                                     <td>
                                         <span>@string.Join(", ", currentTargetNodes)</span>
                                     </td>
                                     <td>
-                                        <span>@currentTargetNodes.Count()</span>
+                                        <span>@currentCount</span>
                                     </td>
                                     <td>
                                         <div class="progress">
                                             <div class="progress-bar" style="width: @currentPercentage%">
-                                                <span>@currentTargetNodes.Count() / @solution.Genes.Count()</span>
+                                                <span>@currentCount / @solution.Genes.Count()</span>
                                             </div>
                                         </div>
                                     </td>
