Fixed small bugs and inconsistencies.

--- a/GeneticAlgNetControl/Pages/About.cshtml
+++ b/GeneticAlgNetControl/Pages/About.cshtml
@@ -165,7 +165,7 @@
                     <span>To cite <span class="font-italic font-weight-bold">GenericAlgNetControl</span>, please use the publication below.</span>
                 </div>
                 <div class="mb-1">
-                    <span id="about-citing-publication">V.-B. Popescu, K. Kanhaiya, I. Năstac, E. Czeizler and I. Petre, <span class="font-italic">Identifying efficient controls of complex interaction networks using genetic algorithms</span>.</span>
+                    <span id="about-citing-publication">V.-B. Popescu, K. Kanhaiya, I. Năstac, E. Czeizler and I. Petre, <span class="font-italic">Identifying efficient controls of complex interaction networks using genetic algorithms</span>, July 2020, available at <a href="https://arxiv.org/abs/2007.04853" target="_blank">arXiv.org</a> <span><i class="fas fa-external-link-alt"></i></span>.</span>
                 </div>
             </div>
         </div>
